--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,8 @@
     -fx-text-fill: white;
 }
 .wonderLabel {
-    -fx-font-size: 24;
-    -fx-font-family: Gentury Gothic;
+    -fx-font-size: 28;
+    -fx-font-family: Gotcha Gothic;
     -fx-font-weight: normal;
     -fx-text-fill: white;
     -fx-border-color: transparent;
