Update 12, -WRITTEN OVER UPDATE 11-, in this update, I created objects within the new scene, created the service class for the now populated Topic Table in my database. I created a grid pane which contains buttons, created and named within a for loop using an arrayList created from the topicNames from the Topic Table in my database. Each button will lead to a quiz.

--- a/src/style.css
+++ b/src/style.css
@@ -51,3 +51,13 @@
     -fx-background-color: black;
     -fx-padding: 3 15 3 15;
 }
+.selectedButton{
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: #a55538;
+    -fx-font-size: 36;
+    -fx-font-family: Gotcha Gothic;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+}
