--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,14 @@
     -fx-font-weight: bold;
     -fx-text-fill: white;
 }
+.topicButtons {
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-padding: 25px 25px 25px 25px;
+    -fx-background-radius: 0;
+    -fx-background-color: black;
+    -fx-font-size: 26;
+    -fx-font-family: Gotcha Gothic;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+}
